package com.molvenolakeresort.event;

import javax.persistence.Entity;

//@Entity
public class Participant implements User {


}
